--- a/views/parts/01-up.ejs
+++ b/views/parts/01-up.ejs
@@ -20,8 +20,76 @@
   </head>
   <body>
 
-    <ul class="nav nav-tabs">
+
+    <nav class="navbar navbar-default navbar-fixed-top nbar1">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Noveria</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+
+            <li class="btn1"><a href="/">Home</a></li>
+            <li class="btn1"><a href="/1">Page 1</a></li>
+            <li class="btn1"><a href="/2">Page 2</a></li>
+
+
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">One more separated link</a></li>
+              </ul>
+            </li>
+          </ul>
+          <form class="navbar-form navbar-left">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
+          <ul class="nav navbar-nav navbar-right">
+            <!-- <li><a href="#">Link</a></li> -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Log: In / Out</a></li>
+                <li><a href="#">Sign-Up</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Contact Us</a></li>
+
+                <!-- <li><a href="#">Separated link</a></li> -->
+              </ul>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
+
+    <div class="jumbotron jumbot1">
+      <div class="container">
+        <!-- <h1 class="t1">NOVERIA</h1> -->
+        <img class="pic-nov1" src="../img/01-design/Noveria1.png" alt="Missing Pic.">
+      </div>
+    </div>
+
+    <!-- <ul class="nav nav-tabs menu1">
       <li role="presentation" class="btn1"><a href="/">Home</a></li>
       <li role="presentation" class="btn1"><a href="/1">One</a></li>
       <li role="presentation" class="btn1"><a href="/2">Two</a></li>
-    </ul>
+    </ul> -->
