--- a/views/parts/01-up.ejs
+++ b/views/parts/01-up.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Noveria</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -67,8 +67,8 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Log: In / Out</a></li>
-                <li><a href="#">Sign-Up</a></li>
+                <li><a href="/login">Log: In / Out</a></li>
+                <li><a href="/3">Sign-Up</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Contact Us</a></li>
 
