add update profile

--- a/views/pages/acc/01-signup.ejs
+++ b/views/pages/acc/01-signup.ejs
@@ -18,6 +18,8 @@
         <input type="text" class="form-control myfc" name="name" value="" placeholder="Full Name">
         <input type="email" class="form-control myfc" name="email" value="" placeholder="Email Address">
         <input type="password" class="form-control myfc" name="password" value="" placeholder="Password">
+        <input type="text" class="form-control myfc" name="address" value="" placeholder="Shipping Address...">
+
         <button type="submit" class="btn btn-success" name="button"> - Submit - </button>
       </form>
 
