--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,7 +1,7 @@
 body{
   background-color: gray;
   padding: 10px;
-  text-align: center;
+  /*text-align: center;*/
 }
 
 .btn1{
@@ -32,6 +32,14 @@ body{
   height: auto;
 }
 
+.myInputNavCont{
+  width: 30vw;
+  /*border: 1px solid blue;*/
+}
+
+.myInputNav{
+  width: 100% !important;
+}
 
 /*----------------------------------------*/
 
