add products page

--- a/views/pages/main/01-one.ejs
+++ b/views/pages/main/01-one.ejs
@@ -1,4 +1,4 @@
-<% include ../parts/01-up %>
+<% include ../../parts/01-up %>
 
   <h3>Hello my name is <strong>Edmundo Rubio</strong></h3>
 
@@ -20,4 +20,4 @@
   <p>contact me: <strong>erubio@mycode.website</strong></p>
 
 
-<% include ../parts/02-dw %>
+<% include ../../parts/02-dw %>
