--- a/views/parts/01-up.ejs
+++ b/views/parts/01-up.ejs
@@ -65,12 +65,24 @@
             <button type="submit" class="btn btn-default">Search</button>
           </form>
 
+          <ul class="nav navbar-nav navbar-right">
+
+
+          <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">Categories</a>
+            <ul class="dropdown-menu">
+              <% for (var i = 0; i < categories.length; i++)  { %>
+                <li><a href="/products/<%= categories[i]._id %>"><%= categories[i].name %></a></li>
+              <% } %>
+            </ul>
+          </li>
+
+
 
 
           <% if(!user) { %>
 
-                      <ul class="nav navbar-nav navbar-right">
-                        <!-- <li><a href="#">Link</a></li> -->
+
+
                         <li class="dropdown">
                           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Log-In. <span class="caret"></span></a>
                           <ul class="dropdown-menu">
@@ -81,14 +93,13 @@
                             <li><a href="/1">Contact Us</a></li>
                           </ul>
                         </li>
-                      </ul>
+
 
 
                   <% }else{ %>
 
 
-                    <ul class="nav navbar-nav navbar-right">
-                      <!-- <li><a href="#">Link</a></li> -->
+
                       <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Log-in as: <%= user.profile.name %><span class="caret"></a>
                         <ul class="dropdown-menu">
@@ -99,13 +110,13 @@
                           <li><a href="/1">Contact Us</a></li>
                         </ul>
                       </li>
-                    </ul>
+
 
 
 
             <% } %>
 
-
+            </ul>
 
 
 
